--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,61 +8,143 @@
   <!-- Pretendard 폰트 로드 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/Pretendard/dist/web/static/pretendard.css">
   <style>
-    body { margin:0; padding:1rem; font-family:'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif; background:#f9f9f9; }
-    .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; }
-    .top-gif { display:block; width:100%; max-width:200px; height:auto; margin:0 auto 1rem; }
-    .home-button { display:flex; align-items:center; cursor:pointer; margin-bottom:1rem; color:#007bff; }
-    .home-button img { width:16px; height:16px; margin-right:.25rem; }
-    input, select, button { display:block; width:100%; padding:.75rem; font-size:1rem; margin:.5rem 0; box-sizing:border-box; border:1px solid #ccc; border-radius:4px; }
-    button { background:#007bff; color:white; border:none; }
-    p.error { color:#d00; font-size:.9rem; text-align:center; margin:.25rem 0 0; }
-    .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
-    .menu-button:nth-child(2) { background:#ffc107; }
-    .menu-button:nth-child(3) { background:#dc3545; }
-    .report-img { display:block; max-width:100%; margin:0 auto; }
-    .hidden { display:none !important; }
-    #questionImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
-    #choiceButtons { text-align:center; }
-    #choiceButtons button { display:inline-block; width:18%; margin:1%; padding:.75rem 0; font-size:1.5rem; border:1px solid #007bff; border-radius:4px; background:white; color:#007bff; cursor:pointer; }
-    #submitButton, #toQuizButton, #skipButton { display:block; width:100%; margin:1rem 0; padding:.75rem; font-size:1rem; border:none; border-radius:4px; cursor:pointer; }
-    #submitButton { background:#007bff; }
-    #toQuizButton { background:#17a2b8; }
-    #skipButton { background:#6c757d; }
-    #feedback { text-align:center; font-size:1.1rem; margin-top:1rem; }
-    #retryButton, #explainButton, #nextButton { display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem; border:none; border-radius:4px; cursor:pointer; }
-    #retryButton { background:#007bff; }
-    #explainButton { background:#17a2b8; }
-    #nextButton { background:#28a745; }
-    #explanationImage { width:100%; height:auto; margin:1rem 0; border:1px solid #ccc; border-radius:4px; }
-    #originalQuestion { text-align:center; color:red; font-size:1rem; margin-top:1rem; }
-    #quizSentenceSection, #quizFeedbackSection { padding:1rem 0; }
-    #quizSentence { font-size:1rem; margin:1rem 0; }
-    #oxButtons { text-align:center; }
-    #oxButtons button { display:inline-block; width:40%; margin:1%; padding:.75rem 0; font-size:1.5rem; border:1px solid #007bff; border-radius:4px; background:white; color:#007bff; cursor:pointer; }
-    #quizFeedback { text-align:center; font-size:1.1rem; margin:1rem 0; }
-    #quizOptions button { display:block; width:100%; padding:.75rem; margin:.5rem 0; font-size:1rem; border:none; border-radius:4px; cursor:pointer; }
-    #quizNextSentenceButton { background:#ffc107; color:white; }
-    #quizNextQuestionButton { background:#6c757d; color:white; }
-    #quizReviewOriginalButton { background:#17a2b8; color:white; }
+    body {
+      margin: 0;
+      padding: 1rem;
+      font-family: 'Pretendard Variable', Pretendard, system-ui, sans-serif;
+      background: #f9f9f9;
+    }
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin: 0 0 .5rem;
+      font-size: 1.5rem;
+      text-align: center;
+    }
+    .hidden { display: none !important; }
+    .home-button {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      margin-bottom: 1rem;
+      color: #007bff;
+    }
+    .home-button img {
+      width: 16px;
+      height: 16px;
+      margin-right: .25rem;
+    }
+    input, select, button {
+      width: 100%;
+      padding: .75rem;
+      margin: .5rem 0;
+      box-sizing: border-box;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      background: #007bff;
+      color: #fff;
+      border: none;
+    }
+    p.error {
+      color: #d00;
+      font-size: .9rem;
+      text-align: center;
+    }
+    .menu-button {
+      margin-bottom: .75rem;
+      color: #fff;
+      font-size: 1rem;
+    }
+    .menu-button:nth-child(1) { background: #28a745; }
+    .menu-button:nth-child(2) { background: #ffc107; }
+    .menu-button:nth-child(3) { background: #dc3545; }
+    #questionImage, #explanationImage {
+      width: 100%;
+      height: auto;
+      margin: 1rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #choiceButtons button {
+      display: inline-block;
+      width: 18%;
+      margin: 1%;
+      padding: .75rem 0;
+      font-size: 1.5rem;
+      border: 1px solid #007bff;
+      border-radius: 4px;
+      background: white;
+      color: #007bff;
+      cursor: pointer;
+    }
+    #submitButton, #toQuizButton, #skipButton,
+    #retryButton, #explainButton, #nextButton,
+    #quizOptions button {
+      width: 100%;
+      padding: .75rem;
+      margin: .5rem 0;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    #submitButton { background: #007bff; }
+    #toQuizButton { background: #17a2b8; }
+    #skipButton { background: #6c757d; }
+    #retryButton { background: #007bff; }
+    #explainButton { background: #17a2b8; }
+    #nextButton { background: #28a745; }
+    #oxButtons button {
+      display: inline-block;
+      width: 40%;
+      margin: 1%;
+      padding: .75rem 0;
+      font-size: 1.5rem;
+      border: 1px solid #007bff;
+      border-radius: 4px;
+      background: white;
+      color: #007bff;
+      cursor: pointer;
+    }
+    #quizNextSentenceButton { background: #ffc107; }
+    #quizNextQuestionButton { background: #6c757d; }
+    #quizReviewOriginalButton { background: #17a2b8; }
   </style>
 </head>
 <body>
   <div class="container">
-    <div id="homeButton" class="home-button hidden"><img src="icons/home.png" alt="Home"><span>처음으로</span></div>
+    <!-- 홈 버튼 -->
+    <div id="homeButton" class="home-button hidden">
+      <img src="icons/home.png" alt="Home"><span>처음으로</span>
+    </div>
+
+    <!-- ① 로그인 -->
     <div id="loginSection">
       <h1>GAIA 모의고사 복습 사이트</h1>
-      <img src="globe.gif" class="top-gif" alt="Globe 로고">
-      <input id="loginId" placeholder="리클래스 ID 입력">
+      <img src="globe.gif" alt="Globe 로고" style="display:block; width:60%; max-width:200px; margin:0 auto 1rem;">
+      <input type="text" id="loginId" placeholder="리클래스 ID 입력">
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
+
+    <!-- ② 회차 선택 -->
     <div id="examSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <select id="examSelect"></select>
       <button id="examBtn">회차 선택</button>
       <p id="examMsg" class="error"></p>
     </div>
+
+    <!-- ③ 메뉴 -->
     <div id="menuSection" class="hidden">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <button id="menuReport" class="menu-button">1. 내 성적표 확인</button>
@@ -70,11 +152,15 @@
       <button id="menuQuiz" class="menu-button">3. 틀린 문제 O/X 퀴즈</button>
       <p id="menuMsg" class="error"></p>
     </div>
+
+    <!-- ④ 성적표 -->
     <div id="reportSection" class="hidden">
       <h1>내 성적표</h1>
       <img id="reportImage" class="report-img" alt="성적표 이미지">
       <p id="reportMsg" class="error"></p>
     </div>
+
+    <!-- ⑤ 틀린 문제 다시 풀어보기 -->
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀어보기</h1>
       <div id="reviewQuestionSection">
@@ -93,6 +179,8 @@
         <button id="nextButton" class="hidden">다음 문제</button>
       </div>
     </div>
+
+    <!-- ⑥ 틀린 문제 O/X 퀴즈 -->
     <div id="quizSection" class="hidden">
       <h1>틀린 문제 O/X 퀴즈</h1>
       <div id="quizSentenceSection" class="hidden">
@@ -113,17 +201,11 @@
       </div>
     </div>
   </div>
+
   <script>
-    let currentId = '', currentExam = '';
-    let wrongList = [], currentWrongIndex = 0;
-    let quizSentences = [], currentSentenceIndex = 0;
-    let selectedAnswer = null;
-    function hideAll() { ['loginSection','examSection','menuSection','reportSection','reviewSection','quizSection'].forEach(id => document.getElementById(id).classList.add('hidden')); }
-    function clearMsgs() { ['loginMsg','examMsg','menuMsg','reviewMsg','feedback','quizFeedback'].forEach(id => { const el = document.getElementById(id); if (el) el.textContent=''; }); }
-    function resetReviewUI() { ['submitButton','toQuizButton','skipButton','retryButton','explainButton','nextButton','questionImage','explanationImage'].forEach(id=>{const el=document.getElementById(id);if(el)el.classList.add('hidden');}); const cb=document.getElementById('choiceButtons'); if(cb)cb.innerHTML=''; selectedAnswer=null; }
-    document.getElementById('loginBtn').onclick = () => { clearMsgs(); resetReviewUI(); const id=document.getElementById('loginId').value.trim(); if(!id){ document.getElementById('loginMsg').textContent='ID를 입력하세요'; return;} fetch(`/api/authenticate?id=${encodeURIComponent(id)}`).then(res=>res.json()).then(d=>{ if(d.authenticated){ currentId=id; hideAll(); document.getElementById('examSection').classList.remove('hidden'); fetch('/api/exams').then(r=>r.json()).then(exs=>{const sel=document.getElementById('examSelect'); sel.innerHTML=''; exs.forEach(e=>sel.add(new Option(e,e)));}); } else { document.getElementById('loginMsg').textContent='인증되지 않은 ID입니다'; }}).catch(()=>{ document.getElementById('loginMsg').textContent='인증 오류'; }); };
-    document.getElementById('examBtn').onclick = () => { clearMsgs(); resetReviewUI(); const ex=document.getElementById('examSelect').value; if(!ex){ document.getElementById('examMsg').textContent='회차 선택'; return;} currentExam=ex; hideAll(); document.getElementById('menuSection').classList.remove('hidden'); document.getElementById('homeButton').classList.remove('hidden'); };
-    document.getElementById('menuReport').onclick = () => { hideAll(); clearMsgs(); resetReviewUI(); document.getElementById('reportSection').classList.remove('hidden'); fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`).then(r=>r.json()).then(d=>{ if(d.url) document.getElementById('reportImage').src=d.url; else document.getElementById('reportMsg').textContent=d.error; }).catch(()=>{ document.getElementById('reportMsg').textContent='로드 오류'; }); };
-    document.getElementById('menuReview').onclick = () => { hideAll(); clearMsgs(); resetReviewUI(); document.getElementById('reviewSection').classList.remove('hidden'); fetch(`/api/review?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`).then(r=>r.json()).then(d=>{ wrongList=d.wrongList.map(x=>x.question); currentWrongIndex=0; loadQuestion(wrongList[0]); }).catch(()=>{ document.getElementById('reviewMsg').textContent='불러오기 오류'; }); };
-    function loadQuestion(qno){ clearMsgs(); resetReviewUI(); const qi=document.getElementById('questionImage'); qi.src=`/problem_images/${encodeURIComponent(currentExam)}/${qno}.png`; qi.classList.remove('hidden'); const cb=document.getElementById('choiceButtons'); ['①','②','③','④','⑤'].forEach((label,idx)=>{const btn=document.createElement('button'); btn.textContent=label; btn.onclick=()=>{ selectedAnswer=idx+1; cb.querySelectorAll('button').forEach(b=>b.style.background='white'); btn.style.background='#d0e6ff'; }; cb.appendChild(btn);}); document.getElementById('submitButton').classList.remove('hidden'); document.getElementById('submitButton').onclick=()=>submitAnswer(qno); document.getElementById('toQuizButton').classList.remove('hidden'); document.getElementById('toQuizButton').onclick=()=>{ hideAll(); clearMsgs(); resetReviewUI(); document.getElementById('quizSection').classList.remove('hidden'); currentSentenceIndex=0; loadQuizSentences(qno); }; document.getElementById('skipButton').classList.remove('hidden'); document.getElementById('skipButton').onclick=()=>nextQuestion(); }
-    function submitAnswer(qno){ if(typeof selectedAnswer!=='number'){ document.getElementById('reviewMsg').textContent='선지를 선택하세요'; return;} clearMsgs(); fetch(`/api/submit_review?exam=${encodeURIComponent(currentExam)}&question=${qno}&answer=${selectedAnswer}`).then(r=>r.json()).then(d=>{ document.getElementById('reviewQuestionSection').classList.add('hidden'); const fb=document.getElementById('feedback'); fb.textContent=d.correct?'정답입니다!':'오답입니다.'; fb.style.color=d.correct?'#007bff':'#dc3545'; document.getElementById('reviewFeedbackSection').classList.remove('hidden'); document.getElementById('retryButton').classList.remove('hidden'); document.getElementById('retryButton').onclick=()=>{ document.getElementById('reviewFeedbackSection').classList.add('hidden'); document.getElementById('reviewQuestionSection').classList.remove('hidden'); loadQuestion(qno); }; document.getElementById('explainButton').classList.remove('hidden'); document.getElementById('explainButton').onclick=()=>{ const ei=document.getElementById('explanationImage'); ei.src=`/exp_images/${encodeURIComponent(currentExam)}/${qno}.png`; ei.classList.remove
+    // 스크립트는 main.js 파일에 모두 분리되어 있습니다.
+    // main.js를 다음과 같이 로드해 주세요.
+    // (login, exam load, menu actions, review, quiz 로직)
+  </script>
+</body>
+</html>
