--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,176 +8,179 @@
   <!-- Pretendard 폰트 로드 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/Pretendard/dist/web/static/pretendard.css">
   <style>
-    /* ── 공통 레이아웃 ── */
-    body { 
-      margin: 0; 
-      padding: 1rem; 
-      font-family: 'Pretendard Variable', Pretendard, system-ui, sans-serif; 
-      background: #f9f9f9; 
+    body {
+      margin: 0;
+      padding: 1rem;
+      font-family: 'Pretendard Variable', Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', sans-serif;
+      background: #f9f9f9;
     }
-    .container { 
-      max-width: 400px; 
-      margin: 0 auto; 
-      background: white; 
-      padding: 1rem; 
-      border-radius: 8px; 
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    h1 { 
-      margin: 0 0 .5rem; 
-      font-size: 1.5rem; 
-      text-align: center; 
+    h1 {
+      margin: 0 0 0.5rem;
+      font-size: 1.5rem;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
-    .top-gif { 
-      display: block; 
-      width: 100%; 
-      max-width: 200px; 
-      height: auto; 
-      margin: 0 auto 1rem; 
+    .home-button {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      margin-bottom: 1rem;
+      font-size: 16px;
+      color: #007bff;
     }
-    .home-button { 
-      display: flex; 
-      align-items: center; 
-      cursor: pointer; 
-      margin-bottom: 1rem; 
-      color: #007bff; 
+    .home-button img {
+      width: 16px;
+      height: 16px;
+      margin-right: 0.25rem;
     }
-    .home-button img { 
-      width: 16px; 
-      height: 16px; 
-      margin-right: .25rem; 
+    input, select, button {
+      display: block;
+      width: 100%;
+      padding: 0.75rem;
+      font-size: 1rem;
+      margin: 0.5rem 0;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
-    input, select, button { 
-      display: block; 
-      width: 100%; 
-      padding: .75rem; 
-      font-size: 1rem; 
-      margin: .5rem 0; 
-      box-sizing: border-box; 
-      border: 1px solid #ccc; 
-      border-radius: 4px; 
+    button {
+      background: #007bff;
+      color: white;
+      border: none;
     }
-    button { 
-      background: #007bff; 
-      color: white; 
-      border: none; 
+    p.error {
+      color: #d00;
+      font-size: 0.9rem;
+      margin: 0.25rem 0 0;
+      text-align: center;
     }
-    p.error { 
-      color: #d00; 
-      font-size: .9rem; 
-      text-align: center; 
-      margin: .25rem 0 0; 
-    }
-    .menu-button { 
-      background: #28a745; 
-      color: white; 
-      font-size: 1rem; 
-      margin-bottom: .75rem; 
+    .menu-button {
+      background: #28a745;
+      color: white;
+      font-size: 1rem;
+      margin-bottom: 0.75rem;
     }
     .menu-button:nth-child(2) { background: #ffc107; }
     .menu-button:nth-child(3) { background: #dc3545; }
-    .report-img { 
-      display: block; 
-      max-width: 100%; 
-      margin: 0 auto; 
+    .report-img {
+      display: block;
+      max-width: 100%;
+      margin: 0 auto;
     }
-    .hidden { display: none !important; }
+    .top-gif {
+      display: block;
+      width: 60%;
+      max-width: 200px;
+      margin: 0 auto 1rem;
+    }
+    .hidden { display: none; }
 
-    /* ── 틀린 문제 다시 풀어보기 스타일 ── */
-    #questionImage { 
-      width: 100%; 
-      height: auto; 
-      margin: 1rem 0; 
-      border: 1px solid #ccc; 
-      border-radius: 4px; 
-    }
-    #choiceButtons { text-align: center; }
-    #choiceButtons button {
-      display: inline-block; 
-      width: 18%; 
-      margin: 1%; 
-      padding: .75rem 0;
-      font-size: 1.5rem; /* 선택지 기호 크기 키움 */
-      border: 1px solid #007bff; 
+    /* 틀린 문제 다시 풀어보기 */
+    #reviewContainer { text-align: center; }
+    #questionImage {
+      max-width: 100%;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
       border-radius: 4px;
-      background: white; 
-      color: #007bff; 
+    }
+    .choice-button {
+      display: inline-block;
+      width: 18%;
+      margin: 1%;
+      padding: 0.75rem 0;
+      font-size: 1.5rem;
+      border: 1px solid #007bff;
+      border-radius: 4px;
+      background: white;
+      color: #007bff;
       cursor: pointer;
     }
     #submitButton, #toQuizButton, #skipButton {
-      display: block; 
-      width: 100%; 
-      margin: 1rem 0; 
-      padding: .75rem; 
+      display: block;
+      width: 100%;
+      padding: 0.75rem;
       font-size: 1rem;
-      border: none; 
-      border-radius: 4px; 
+      margin: 1rem 0;
+      border: none;
+      border-radius: 4px;
       cursor: pointer;
     }
     #submitButton   { background: #007bff; }
     #toQuizButton   { background: #17a2b8; }
     #skipButton     { background: #6c757d; }
-    #feedback { 
-      text-align: center; 
-      font-size: 1.1rem; 
-      margin-top: 1rem; 
+    #feedback {
+      text-align: center;
+      font-size: 1.1rem;
+      margin-top: 1rem;
     }
     #retryButton, #explainButton, #nextButton {
-      display: block; 
-      width: 100%; 
-      padding: .75rem; 
-      margin: .5rem 0; 
+      display: block;
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
       font-size: 1rem;
-      border: none; 
-      border-radius: 4px; 
+      border: none;
+      border-radius: 4px;
       cursor: pointer;
     }
     #retryButton   { background: #007bff; }
     #explainButton { background: #17a2b8; }
     #nextButton    { background: #28a745; }
     #explanationImage {
-      width: 100%; 
-      height: auto; 
-      margin: 1rem 0; 
-      border: 1px solid #ccc; 
-      border-radius: 4px; 
+      width: 100%;
+      height: auto;
+      margin: 1rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
 
-    /* ── OX 퀴즈 스타일 ── */
+    /* OX 퀴즈 */
     #originalQuestion {
-      text-align: center; 
-      color: red; 
-      font-size: 1rem; 
-      margin-top: 1rem; 
+      text-align: center;
+      color: red;
+      font-size: 1rem;
+      margin-top: 1rem;
     }
     #quizSentenceSection, #quizFeedbackSection { padding: 1rem 0; }
-    #quizSentence { font-size: 1rem; margin: 1rem 0; }
-    #oxButtons { text-align: center; }
+    #quizSentence {
+      font-size: 1rem;
+      margin: 1rem 0;
+    }
     #oxButtons button {
-      display: inline-block; 
-      width: 40%; 
-      margin: 1%; 
-      padding: .75rem 0;
-      font-size: 1.5rem; /* O/X 기호 크기 키움 */
-      border: 1px solid #007bff; 
+      display: inline-block;
+      width: 40%;
+      margin: 1%;
+      padding: 0.75rem 0;
+      font-size: 1.5rem;
+      border: 1px solid #007bff;
       border-radius: 4px;
-      background: white; 
-      color: #007bff; 
+      background: white;
+      color: #007bff;
       cursor: pointer;
     }
-    #quizFeedback { 
-      text-align: center; 
-      font-size: 1.1rem; 
-      margin: 1rem 0; 
+    #quizFeedback {
+      text-align: center;
+      font-size: 1.1rem;
+      margin: 1rem 0;
     }
     #quizOptions button {
-      display: block; 
-      width: 100%; 
-      padding: .75rem; 
-      margin: .5rem 0; 
+      display: block;
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
       font-size: 1rem;
-      border: none; 
-      border-radius: 4px; 
+      border: none;
+      border-radius: 4px;
       cursor: pointer;
     }
     #quizNextSentenceButton { background: #ffc107; color: white; }
@@ -189,14 +192,14 @@
   <div class="container">
     <!-- 홈 버튼 -->
     <div id="homeButton" class="home-button hidden">
-      <img src="icons/home.png" alt="Home"><span>처음으로</span>
+      <img src="icons/home.png" alt="Home 아이콘"><span>처음으로</span>
     </div>
 
     <!-- ① 로그인 -->
     <div id="loginSection">
       <h1>GAIA 모의고사 복습 사이트</h1>
       <img src="globe.gif" class="top-gif" alt="Globe 로고">
-      <input id="loginId" placeholder="리클래스 ID 입력">
+      <input type="text" id="loginId" placeholder="리클래스 ID 입력">
       <button id="loginBtn">로그인</button>
       <p id="loginMsg" class="error"></p>
     </div>
@@ -225,13 +228,54 @@
       <p id="reportMsg" class="error"></p>
     </div>
 
-    <!-- ⑤ 틀린 문제 다시 풀어보기 (이하 동일) -->
-    <!-- ... -->
+    <!-- ⑤ 틀린 문제 다시 풀어보기 -->
+    <div id="reviewSection" class="hidden">
+      <h1>틀린 문제 다시 풀어보기</h1>
+      <div id="reviewContainer">
+        <img id="questionImage" class="hidden" alt="문제 이미지">
+        <div id="choiceButtons"></div>
+        <button id="submitButton" class="hidden">제출하기</button>
+        <button id="toQuizButton" class="hidden">O/X 퀴즈 풀러가기</button>
+        <button id="skipButton" class="hidden">SKIP</button>
+        <p id="reviewMsg" class="error"></p>
+      </div>
+      <div id="reviewFeedbackSection" class="hidden">
+        <p id="feedback"></p>
+        <img id="explanationImage" class="hidden" alt="해설 이미지">
+        <button id="retryButton" class="hidden">다시 풀어보기</button>
+        <button id="explainButton" class="hidden">해설 확인하기</button>
+        <button id="nextButton" class="hidden">다음 문제</button>
+      </div>
+    </div>
+
+    <!-- ⑥ 틀린 문제 O/X 퀴즈 -->
+    <div id="quizSection" class="hidden">
+      <h1>틀린 문제 O/X 퀴즈</h1>
+      <div id="quizSentenceSection" class="hidden">
+        <p id="originalQuestion"></p>
+        <p id="quizSentence"></p>
+        <div id="oxButtons">
+          <button id="oxTrueBtn">O</button>
+          <button id="oxFalseBtn">X</button>
+        </div>
+      </div>
+      <div id="quizFeedbackSection" class="hidden">
+        <p id="quizFeedback"></p>
+        <div id="quizOptions">
+          <button id="quizNextSentenceButton" class="hidden">다음 선지로 넘어가기</button>
+          <button id="quizNextQuestionButton" class="hidden">문제 건너뛰기</button>
+          <button id="quizReviewOriginalButton" class="hidden">원본 문제 풀러 가기</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script>
-    // 기존 스크립트 그대로 유지됩니다.
+    // 기존 JavaScript 로직 전체를 아래에 붙여넣으시면 됩니다.
+    // (login, loadExams, menu handlers, loadQuestion, submitAnswer, nextQuestion,
+    //  loadQuizSentences, showQuizSentence, handleQuizAnswer 등)
   </script>
 </body>
 </html>
+
 
