--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,10 @@
   <style>
     /* ── 공통 레이아웃 ── */
     body { margin:0; padding:1rem; font-family:'Pretendard', sans-serif; font-weight: 400; background:#f9f9f9; }
+button {
+  font-family: 'Pretendard', sans-serif;
+}
+
     .container { max-width:400px; margin:0 auto; background:white; padding:1rem; border-radius:8px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
     h1 { margin:0 0 .5rem; font-size:1.5rem; text-align:center; }
     .top-gif { display:block; width:100%; max-width:200px; height:auto; margin:0 auto 1rem; }
