--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,32 @@ button {
     button { background:#007bff; color:white; border:none; }
     p.error { color:#d00; font-size:.9rem; text-align:center; margin:.25rem 0 0; }
     .menu-button { background:#28a745; color:white; font-size:1rem; margin-bottom:.75rem; }
+.menu-button {
+  font-size: 1rem;
+  margin-bottom: .75rem;
+  padding: .75rem;
+  border: none;
+  border-radius: 4px;
+  width: 100%;
+  cursor: pointer;
+  font-family: 'Pretendard', sans-serif;
+}
+
+/* 버튼 개별 색상 지정 */
+#menuReport {
+  background-color: #1363DF; /* 진한 파랑 */
+  color: white;
+}
+#menuReview {
+  background-color: #47B5FF; /* 밝은 파랑 */
+  color: white;
+}
+#menuQuiz {
+  background-color: #DFF6FF; /* 하늘색 */
+  color: #1363DF;             /* 글자색은 진한 파랑 */
+  border: 1px solid #1363DF;  /* 테두리로 강조 */
+}
+
     .menu-button:nth-child(2) { background:#ffc107; }
     .menu-button:nth-child(3) { background:#dc3545; }
     .report-img { display:block; max-width:100%; margin:0 auto; }
